[package]
name = "rustref"
version = "0.1.0"
authors = ["Mackenzie Hauck <mhauck@live.ca>"]

[dependencies]
dotenv = "0.11"
serde = "1.0"
serde_derive = "1.0" 
serde_json = "1.0"
toml = "0.4"
rayon = "1.0"
reqwest = "0.8"
rocket = "0.3.8"
rocket_codegen = "0.3.8"
rocket_contrib = "0.3.8"
cloudflare = { path = "../cloudflare-rs" }

[dev-dependencies]
serde_json = "1.0"