[package]
name = "rustref"
version = "0.1.0"
authors = ["Mackenzie Hauck <mhauck@live.ca>"]

[dependencies]
dotenv = "0.11"
serde = "1.0"
serde_derive = "1.0" 
serde_json = "1.0"
toml = "0.4"
lazy_static = "1.0"
rayon = "1.0"
reqwest = "0.8"
rocket = "0.3.10"
rocket_codegen = "0.3.10"
hmac = "0.6"
sha-1 = "0.7.0"
cloudflare = { git = "https://github.com/nocduro/cloudflare-rs" }

[dependencies.rocket_contrib]
version = "0.3.10"
default-features = true
features = ["tera_templates"]
